Containerization-Orchestration/2.Kubernetes/138/go-app/deploy/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-app
  namespace: staging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-app
  template:
    metadata:
      labels:
        app: go-app
    spec:
      containers:
      - name: go-app
        image: 424432388155.dkr.ecr.us-east-1.amazonaws.com/go-app:0.1.2
        ports:
        - name: http
          containerPort: 8001
        resources:
          requests:
            memory: 512Mi
            cpu: 500m
          limits:
            memory: 1024Mi
            cpu: 1000m
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - go-app
                  - rust-app
              topologyKey: topology.kubernetes.io/zone
