Containerization-Orchestration/2.Kubernetes/138/go-app/deploy/service.yaml
---
---
apiVersion: v1
kind: Service
metadata:
  namespace: staging
  name: go-app
  labels:
    app: go-app
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8001
    protocol: TCP
  selector:
    app: go-app
